# fastapi-rbac-admin

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/api/: api_routers.py
app/api/endpoints/: login.py
app/api/endpoints/system/: dept.py  menu.py  post.py  role.py  tenant.py  user.py
app/api/vo/system/: dept.py  menu.py  post.py  role.py  tenant.py  user.py
app/core/: app.py  config.py  db.py  deps.py  lifespan.py  logger.py  middleware.py  security.py  system_context.py  tenant_init.py
app/models/: __init__.py  common.py  system.py
app/services/system/: dept.py  menu.py  post.py  role.py  tenant.py  user.py
app/utils/: response.py  tree.py
config/: base.yaml  prod.yaml
static/: swagger-ui-bundle.js
